--- a/indexxx.html
+++ b/indexxx.html
@@ -9,5 +9,7 @@
 <body>
     <h1>bonjour je commence html</h1>
    <p>cece est mon premier fichier</p>
+   <h2>c'est ici que tout commence</h2>
+   <p>ne jamais abandonner, etre toujour a jour <br> sans jamais se fatique de quoi que ce soit pour en faie proprement sans detour ni contreverse</p>
 </body>
 </html>
