--- a/indexxx.html
+++ b/indexxx.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>mon premier site</title>
+    <title>mon tout premier site en version web</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
