--- a/indexxx.html
+++ b/indexxx.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>mon tout premier site en version web</title>
+    <title>mon tout premier site en version web au bliblotheque de malaga</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>bonjour je vais commencer html</h1>
-   <p>cece est mon premier fichier</p>
+   <p>ceci est mon premier fichier</p>
    <h2>c'est ici que tout commence</h2>
    <p>ne jamais abandonner, etre toujour a jour <br> sans jamais se fatique de quoi que ce soit pour en faie proprement sans detour ni contreverse</p>
 </body>
