--- a/indexxx.html
+++ b/indexxx.html
@@ -21,15 +21,15 @@
         <th>alhsaa</th>       
      </tr>       
     <tr>
-        <tr>l'homme</tr>
-        <tr>Sobrino</tr>
-        <tr>casado</tr>
-        <tr>soltera</tr>
+        <td>l'homme</td>
+        <td>Sobrino</td>
+        <td>casado</td>
+        <td>soltera</td>
     </tr>
     <tr>
-        <tr>mira</tr>
-        <tr>tienes</tr>
-        <tr>zapatillas</tr>
-        <tr>hijo</tr>
+        <td>mira</td>
+        <td>tienes</td>
+        <td>zapatillas</td>
+        <td>hijo</td>
     </tr>
 </table>
