--- a/indexxx.html
+++ b/indexxx.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
@@ -7,13 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>bonjour je vais,des maintenat commencer html</h1>
+   <h1>bonjour je vais,des maintenat commencer html</h1>
    <p>ceci est mon premier fichier</p>
-   <h2>c'est ici que tout commence</h2>
+    <h2>les consignes a respecter</h2>
    <p>ne jamais abandonner, etre toujour a jour <br> sans jamais se fatique de quoi que ce soit pour en faie proprement sans detour ni contreverse</p>
-</body>
-</html>
-<table>
+   <h2>c'est ici que tout commence</h2> <hr>
     <tr>
         <th>honops</th>
         <th>al</th>
@@ -33,3 +31,32 @@
         <td>hijo</td>
     </tr>
 </table>
+ <h2>information presonnelle</h2>
+ <p>nom</p>
+ <p>prenom</p>
+ <p>pays</p>
+ <p>Sport, musique, études</p>
+ <img src="" alt="">
+
+ <ul>
+    <li>foot</li>
+    <li>se promener</li>
+    <li>parler</li>
+    <li>ecouter</li>
+    <li>apprendre</li>
+    <li>respecter</li>
+    <li>evoluer</li>
+ </ul>
+ <a href="https://es.wikipedia.org/wiki/Wikipedia:Portada" target="_blank">c'est ici qu'on trouve wikipedia</a>
+ <form action="" method="">
+    <legend>Nom</legend>
+    <label for="name">Nom</label>
+    <input type="text" name="name" id="name"> <br>
+    <legend>email</legend>
+    <label for="email">email</label>
+    <input type="email" name="email" id="email"> <br>
+    <input type="submit" value="BOUTON">
+ </form>
+
+</body>
+</html>
