--- a/indexxx.html
+++ b/indexxx.html
@@ -12,6 +12,7 @@
     <h2>les consignes a respecter</h2>
    <p>ne jamais abandonner, etre toujour a jour <br> sans jamais se fatique de quoi que ce soit pour en faie proprement sans detour ni contreverse</p>
    <h2>c'est ici que tout commence</h2> <hr>
+   <table>
     <tr>
         <th>honops</th>
         <th>al</th>
