--- a/examen.html
+++ b/examen.html
@@ -56,16 +56,24 @@
     <a href="https://www.philo5.com/Les%20philosophes%20Textes/Nietzsche_DieuEstMort.htm" target="_blank">Pour plus de texte</a>
     <form action="inscription" method="post">
         <label for="name">Nom</label>
-        <input type="text" id="Name" name="name" value="votre nom" required>
+        <input type="text" id="Name" name="name" autocomplete="votre Nom" required>
         <label for="firsname">Prenom</label>
-        <input type="text" id="firsname" name="firsname" value="votre prenom" required>
+        <input type="text" id="firsname" name="firsname" autocomplete="Votre Prenom" required>
         <label for="selection">Selectionne</label>
         <select name="selection" id="selection">
             <option value="Espagne">EspagneS</option>
-            <option value=""></option>
-            <option value=""></option>
-            <option value=""></option>
+            <option value="France"></option>
+            <option value="Argentine"></option>
+            <option value="Guinee"></option>
+            <label for="Message">Message</label>
+            <textarea name="Message" id="Message"></textarea>
+            <input type="submit" value="Envoyer">
         </select>
+        <footer>
+            <p>Alhassane Hono</p>
+            <p>"2026</p>
+            <p>L’homme a besoin de ce qu’il y a de pire en lui s’il veut parvenir à ce qu’il a de meilleur.</p>
+        </footer>
     </form>
 </main>   
 </body>
