--- a/indexxx.html
+++ b/indexxx.html
@@ -50,10 +50,9 @@
  </ul>
  <a href="https://es.wikipedia.org/wiki/Wikipedia:Portada" target="_blank">c'est ici qu'on trouve wikipedia</a>
  <form action="" method="">
-    <legend>Nom</legend>
+    <legend>Formulaire</legend>
     <label for="name">Nom</label>
     <input type="text" name="name" id="name"> <br>
-    <legend>email</legend>
     <label for="email">email</label>
     <input type="email" name="email" id="email"> <br>
     <input type="submit" value="BOUTON">
