--- a/examen2.html
+++ b/examen2.html
@@ -9,9 +9,9 @@
     <header>
         <h1>Examen numero 2</h1>
         <p>Soyez toujoure une personne agreable</p>
-        <nav> <a href="https://chatgpt.com/c/69775f8b-a5f0-8329-819c-3f8b860e8e4f">ChatGPT</a>
-        <a href="https://classiques.uqam.ca/classiques/zenker_ernst_viktor/C17_histoire_philo_chinoise/philo_chinoise_intro.html">A propos</a>
-        <a href="https://essentiels.bnf.fr/fr/societe/spiritualites/21c379d0-49c0-4de4-968a-29b41f1ca1c3-croyances-et-philosophies-chinoises">sevice</a>
+        <nav> <a href="https://chatgpt.com/c/69775f8b-a5f0-8329-819c-3f8b860e8e4f">ChatGPT</a><br>
+        <a href="https://classiques.uqam.ca/classiques/zenker_ernst_viktor/C17_histoire_philo_chinoise/philo_chinoise_intro.html">A propos</a><br>
+        <a href="https://essentiels.bnf.fr/fr/societe/spiritualites/21c379d0-49c0-4de4-968a-29b41f1ca1c3-croyances-et-philosophies-chinoises">sevice</a><br>
         <a href="https://query.libretexts.org/Francais/Introduction_%C3%A0_la_philosophie_(OpenStax)/03%3A_Les_d%C3%A9buts_de_l'histoire_de_la_philosophie_dans_le_monde/3.03%3A_Philosophie_classique_chinoise">Contacte</a>
         </nav>
     </header>
@@ -53,13 +53,13 @@
         </table>
         <form action="Examen" method="post"></form>
         <legend>Formulaire de contact</legend>
-        <label for="Name">Nom</label>
+        <label for="Name">Nom</label><br>
         <input type="text" name="Name" id="Name" autocomplete="Votre nom" required>
         <label for="email">email</label>
-        <input type="email" id="email" name="email" autocomplete="inserer votre email" required>
+        <input type="email" id="email" name="email" autocomplete="inserer votre email" required><br>
         <label for="mot de passe">Mot de passe</label>
-        <input type="password" id="mot de passe" name="mot de passe">
-        <textarea name="message" id="message"></textarea>
+        <input type="password" id="mot de passe" name="mot de passe">br
+        <textarea name="message" id="message"></textarea><br> <br>
         <input type="submit" value="Envoyer">
     </main>
     <footer>
