--- a/examen2.html
+++ b/examen2.html
@@ -53,12 +53,12 @@
         </table>
         <form action="Examen" method="post"></form>
         <legend>Formulaire de contact</legend>
-        <label for="Name">Nom</label><br>
-        <input type="text" name="Name" id="Name" autocomplete="Votre nom" required>
+        <label for="Name">Nom</label>
+        <input type="text" name="Name" id="Name" autocomplete="Votre nom" required><br>
         <label for="email">email</label>
         <input type="email" id="email" name="email" autocomplete="inserer votre email" required><br>
         <label for="mot de passe">Mot de passe</label>
-        <input type="password" id="mot de passe" name="mot de passe">br
+        <input type="password" id="mot de passe" name="mot de passe"><br>
         <textarea name="message" id="message"></textarea><br> <br>
         <input type="submit" value="Envoyer">
     </main>
