--- a/examen.html
+++ b/examen.html
@@ -69,6 +69,7 @@
             <textarea name="Message" id="Message"></textarea>
             <input type="submit" value="Envoyer">
         </select>
+       </form>
         <footer>
             <p>Alhassane Hono</p>
             <p>"2026</p>
