--- a/examen2.html
+++ b/examen2.html
@@ -8,11 +8,11 @@
 <body>
     <header>
         <h1>Examen numero 2</h1>
-        <p>Soyez toujoure une personne agreable</p>
+        <p>Soyez toujoura une personne agreable</p>
         <nav> <a href="https://chatgpt.com/c/69775f8b-a5f0-8329-819c-3f8b860e8e4f">ChatGPT</a><br>
         <a href="https://classiques.uqam.ca/classiques/zenker_ernst_viktor/C17_histoire_philo_chinoise/philo_chinoise_intro.html">A propos</a><br>
-        <a href="https://essentiels.bnf.fr/fr/societe/spiritualites/21c379d0-49c0-4de4-968a-29b41f1ca1c3-croyances-et-philosophies-chinoises">sevice</a><br>
-        <a href="https://query.libretexts.org/Francais/Introduction_%C3%A0_la_philosophie_(OpenStax)/03%3A_Les_d%C3%A9buts_de_l'histoire_de_la_philosophie_dans_le_monde/3.03%3A_Philosophie_classique_chinoise">Contacte</a>
+        <a href="https://essentiels.bnf.fr/fr/societe/spiritualites/21c379d0-49c0-4de4-968a-29b41f1ca1c3-croyances-et-philosophies-chinoises">service</a><br>
+        <a href="https://query.libretexts.org/Francais/Introduction_%C3%A0_la_philosophie_(OpenStax)/03%3A_Les_d%C3%A9buts_de_l'histoire_de_la_philosophie_dans_le_monde/3.03%3A_Philosophie_classique_chinoise">Contact</a>
         </nav>
     </header>
     <main>
@@ -51,16 +51,19 @@
             <td>Canadaise</td>
            </tr>
         </table>
-        <form action="Examen" method="post"></form>
+        <form action="Examen" method="post">
+            <fieldset>
         <legend>Formulaire de contact</legend>
+    </fieldset>
         <label for="Name">Nom</label>
-        <input type="text" name="Name" id="Name" autocomplete="Votre nom" required><br>
+        <input type="text" name="Name" id="Name" placeholder="Votre nom" required><br>
         <label for="email">email</label>
-        <input type="email" id="email" name="email" autocomplete="inserer votre email" required><br>
-        <label for="mot de passe">Mot de passe</label>
-        <input type="password" id="mot de passe" name="mot de passe"><br>
+        <input type="email" id="email" name="email" placeholder="inserer votre email" required><br>
+        <label for="motdepasse">Mot de passe</label>
+        <input type="password" id="motdepasse" name="mot de passe"><br>
         <textarea name="message" id="message"></textarea><br> <br>
         <input type="submit" value="Envoyer">
+    </form>
     </main>
     <footer>
         <article>
