--- a/examen.html
+++ b/examen.html
@@ -56,26 +56,27 @@
     <a href="https://www.philo5.com/Les%20philosophes%20Textes/Nietzsche_DieuEstMort.htm" target="_blank">Pour plus de texte</a>
     <form action="inscription" method="post">
         <label for="name">Nom</label>
-        <input type="text" id="Name" name="name" autocomplete="votre Nom" required>
+        <input type="text" id="Name" name="name" placeholder="votre Nom" required> <br> <br>
         <label for="firsname">Prenom</label>
-        <input type="text" id="firsname" name="firsname" autocomplete="Votre Prenom" required>
+        <input type="text" id="firsname" name="firsname" placeholder="Votre Prenom" required> <br><br>
         <label for="selection">Selectionne</label>
         <select name="selection" id="selection">
-            <option value="Espagne">EspagneS</option>
-            <option value="France"></option>
-            <option value="Argentine"></option>
-            <option value="Guinee"></option>
-            <label for="Message">Message</label>
-            <textarea name="Message" id="Message"></textarea>
-            <input type="submit" value="Envoyer">
+            <option value="Espagne">Espagne</option>
+            <option value="France">France</option>
+            <option value="Argentine">Argentine</option>
+            <option value="Guinee">Guinee</option>
         </select>
+            <label for="Message">Message</label>
+            <textarea name="Message" id="Message"></textarea><br><br>
+            <input type="submit" value="Envoyer">
+       
        </form>
         <footer>
             <p>Alhassane Hono</p>
-            <p>"2026</p>
-            <p>L’homme a besoin de ce qu’il y a de pire en lui s’il veut parvenir à ce qu’il a de meilleur.</p>
+            <p>2026</p>
+            <q>L’homme a besoin de ce qu’il y a de pire en lui s’il veut parvenir à ce qu’il a de meilleur.</q>
         </footer>
-    </form>
+   
 </main>   
 </body>
 </html>
