--- a/Projet.html
+++ b/Projet.html
@@ -7,7 +7,7 @@
 </head>
 <body>
  <header>
-    <h1>Mon projede vie</h1>
+    <h1>Mon projet de vie</h1>
     <p>Tout est beau etagreable depuis le debut de l'humanité</p>
  </header>  
  <main>
@@ -48,15 +48,15 @@
                 <td>pas de recule</td>
             </tr>
         </table>
-        <h2>certaines des plus grans citations phylosophiques</h2>
+        <h2>certaines des plus grans citations philosophiques</h2>
         <blockquote>L'un va auprès de son prochain, parce qu'il se cherche <strong>lui-même,</strong> et un autre parce qu'il aimerait se perdre. <br> Votre mauvais <em>amour</em> pour vous-même fait pour vous de la solitude une prison.</blockquote>
         <a href="https://www.babelio.com/auteur/Friedrich-Nietzsche/2132/citations" target="_blank">trouver touts les citations de Nietzsche</a>
         <form action="inscription" method="post">
             <legend> Vos informations</legend>
             <label for="Nom">Nom</label>
-            <input type="text" id="Nom" name="nom" value="votre nom" required> <br>
+            <input type="text" id="Nom" name="nom" placeholder="votre nom" required> <br>
             <label for="prenom">Prenom</label>
-            <input type="text" id="Prenom" name="prenom" value="Votre prenom" required> <br>
+            <input type="text" id="Prenom" name="prenom" placeholder="Votre prenom" required> <br>
             <label for="sujet"> sujet</label>
             <select name="sujet" id="sujet">
                 <option value="apprendre">Apprendre</option>
@@ -64,7 +64,7 @@
                 <option value="savoir">Savoir</option>
                 <option value="Faire">Faire</option>
                 <option value="musiques">musiques</option>
-            </select>
+            </select> <br> <br>
             <label for="adress">Adress</label> 
             <textarea name="adress" id="adresss" cols="30" rows="3"></textarea> <br>
             <input type="button" value="Valider">
