--- a/indexxx.html
+++ b/indexxx.html
@@ -52,8 +52,8 @@
  <form action="" method="">
     <legend>Formulaire</legend>
     <label for="name">Nom</label>
-    <input type="text" name="name" id="name"> <br>
-    <label for="email">email</label>
+    <input type="text" name="name" id="name" placeholder="Votre nom"> <br>
+    <label for="email" id="email"placeholder="Votre email" name="email" >email</label>
     <input type="email" name="email" id="email"> <br>
     <input type="submit" value="BOUTON">
  </form>
