--- a/devoir 3.html
+++ b/devoir 3.html
@@ -92,7 +92,7 @@
         </section>
         <section>
        <video controls width="700">
-           <source src="videopourlaforme.mp4" type="video/mp4">
+           <source src="videopourlaforme.mp4" type="audio/mpeg">
            Juste pour tester
        </video>
        <audio controls>
