--- a/blog.html
+++ b/blog.html
@@ -109,7 +109,7 @@
                         <input type="text" id="name" name="name" placeholder="Votre nom" required>
                         <br>
                         <label for="firstname">Prenom</label>
-                        <input type="text" id="firstname" name="firtsname" placeholder="Votre prenom" required>
+                        <input type="text" id="firstname" name="firstname" placeholder="Votre prenom" required>
                         <br>
                         <label for="email"> Email</label>  
                         <input type="email" id="email" name="email" placeholder="Votre email" required>
@@ -129,7 +129,7 @@
                         </select>
                         <br>
                         <label for="Message">Message</label>
-                        <textarea name="Message" id="Message" cols="100" rows="70" placeholder="Votre Opinion" required></textarea>
+                        <textarea name="Message" id="Message" cols="30" rows="5" placeholder="Votre Opinion" required></textarea>
                         <br>
                         <input type="submit" value="Confirmer">
                     </fieldset>
