--- a/blog.html
+++ b/blog.html
@@ -142,8 +142,12 @@
             <hr>
            <p>Les origines de la ville ont fait l'objet de révisions historiques constantes. La découverte d'un possible site funéraire wisigothique , aujourd'hui disparu, a conduit certains chercheurs à envisager que l'établissement musulman fortifié de</p>
            <q>Madrid représentait pour moi le lieu où les films étaient projetés en première exclusivité, mais aussi la métropole où chacun pouvait "vivre sa vie", en définitive : un rêve.</q>
-           <a href="https://es.wikipedia.org/wiki/Madrid">Pour en savoir plus sur Madrid</a>
-           <a href="#Debut">Retour en haut</a>
+           <nav>
+            <ul>
+           <li><a href="https://es.wikipedia.org/wiki/Madrid">Pour en savoir plus sur Madrid</a></li>
+           <li><a href="#Debut">Retour en haut</a></li>
+        </ul>
+          </nav>
         </footer>
 </body>
 </html>
