--- a/devoir 3.html
+++ b/devoir 3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Devoir numero 3</title>
+    <link rel="stylesheet" href="styldevoir3.css">
 </head>
 <body>
     <header>
