--- a/devoir 3.html
+++ b/devoir 3.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section>
-    <h2 id="sect"> Accueil</h2>
+    <h2 id="sect"> Accueille</h2>
     <p>En 1958, la Guinée refuse de joindre les rangs de la nouvelle Communauté française et accède à l'indépendance. Sous la gouverne de l'ex-syndicaliste Ahmed Sékou Touré et de son Parti démocratique de Guinée (PDG), qui est parti unique, la Guinée adopte un modèle de développement socialiste. Le régime pratique une sévère répression à l'endroit de l'opposition, incitant plusieurs Guinéens à prendre la route de l'exil. Les résultats économiques s'avèrent insatisfaisants et un léger virage vers le libéralisme est amorcé. Il s'accentue après le renversement de Sékou Touré, en 1984. Des ouvertures démocratiques, que confirme la Constitution de 1990, permettent également la participation d'autres partis à la vie politique. La figure dominante de la Guinée demeure néanmoins Lansana Conté qui assume la présidence de 1984 jusqu'en 2008. S'ensuit une période d'instabilité et de violence. De plus, les inégalités sociales et économiques persistent, malgré une grande diversité de</p>
     <figure>
         <img src="capital.jpg" alt="capital">
