--- a/devoir 3.html
+++ b/devoir 3.html
@@ -30,7 +30,7 @@
     </section>
     <section>
         <h2 id="sec">iframe</h2>
-        <iframe src="Devoir.html" width="400" height="200" name="cadre1" frameborder="0"></iframe>
+        <iframe src="indexxx.html" width="400" height="200" name="cadre1" frameborder="0"></iframe>
     </section>
     <section>
     <h3>Les grandes villes</h3>
@@ -47,9 +47,8 @@
         <li>Koba</li>
     </ul>
     </section>
-    <iframe src="https://maps.app.goo.gl/DAisasV4LJ3HLwV46" width="200" height="500" name="cadre2" frameborder="0"></iframe>
     <section>
-
+    <iframe src="Devoir.html" width="200" height="500" name="cadre2" frameborder="0"></iframe>
     </section>
     <section>
     <h2 id="imag">Les quelques images</h2>
