--- a/examen2.html
+++ b/examen2.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Examen 2</title>
+    <link rel="stylesheet" href="examen2.css">
 </head>
 <body>
     <header>
         <h1>Examen numero 2</h1>
         <p>Soyez toujoura une personne agreable</p>
-        <nav> <a href="https://chatgpt.com/c/69775f8b-a5f0-8329-819c-3f8b860e8e4f">ChatGPT</a><br>
+        <nav>
+        <a href="https://chatgpt.com/c/69775f8b-a5f0-8329-819c-3f8b860e8e4f">ChatGPT</a><br>
         <a href="https://classiques.uqam.ca/classiques/zenker_ernst_viktor/C17_histoire_philo_chinoise/philo_chinoise_intro.html">A propos</a><br>
         <a href="https://essentiels.bnf.fr/fr/societe/spiritualites/21c379d0-49c0-4de4-968a-29b41f1ca1c3-croyances-et-philosophies-chinoises">service</a><br>
         <a href="https://query.libretexts.org/Francais/Introduction_%C3%A0_la_philosophie_(OpenStax)/03%3A_Les_d%C3%A9buts_de_l'histoire_de_la_philosophie_dans_le_monde/3.03%3A_Philosophie_classique_chinoise">Contact</a>
