--- a/devoir 3.html
+++ b/devoir 3.html
@@ -53,13 +53,13 @@
     <section>
     <h2 id="imag">Les quelques images</h2>
     <figure>
-        <img src="Conakry.jpg" alt="Conakry">
+        <img src="./drapeau.jpg" alt="Conakry">
         <figcaption>Ville</figcaption><br>
-        <img src="cona.jpg" alt="cona"><br>
+        <img src="./Madrid.jpg" alt="cona"><br>
         <figcaption>Quartier</figcaption><br>
-        <img src="guinee.jpg" alt="guinee">
+        <img src="./plante.jpg" alt="guinee">
         <figcaption>Carte</figcaption><br>
-        <img src="guin.jpg" alt="guin">
+        <img src="./Madrid.jpg" alt="guin">
         <figcaption>Drapeau</figcaption>
     </figure>
     </section>
