--- a/Devoir.html
+++ b/Devoir.html
@@ -22,7 +22,7 @@
   <h2>Citations philosophie et vie : les plus belles pensées et proverbes</h2>
   <p>Opposée à la mort, distincte de l’existence qui suppose la conscience du vécu, la vie bios ou zoè en grec est l’ensemble des conditions qui permet la reproduction, la croissance et l’adaptation à leur milieu des végétaux et des animaux tels que les étudie la biologie. Expliquer la vie, en particulier son apparition (l’abiogenèse), reste encore aujourd’hui un défi pour la science. Historiquement, les penseurs du vivant se sont divisés en spiritualistes et matérialistes, les premiers cherchant dans des principes métaphysiques la cause de la vie ; les seconds tentant d’expliquer la vie à partir des seuls facteurs physico-chimiques, rouages et humeurs hier, ADN aujourd’hui. Cette opposition atteint son paroxysme avec le vitalisme, mouvement qui, voulant échapper à la lutte stérile entre finalistes courant aristotélicien et</p>
   <p>mécanistes courant cartésien, tente de donner à la vie son propre principe explicatif, comme on le voit chez Bergson et sa conception de l’élan vital. Partout présente pour les philosophes panvitalistes comme Leibniz ou Diderot, aveugle quant à son but pour Schopenhauer, assimilable à la volonté de puissance pour Nietzsche, la vie est aussi un enjeu majeur de la philosophie morale. En témoignent aujourd’hui les débats de la bioéthique. C’est aussi un objet nouveau pour la philosophie</p>
-  <img src="ufgugdh.jpg" alt="Image">
+  <img src="./drapeau.jpg" alt="Image">
   <ul>
     <li>Structure</li>
     <li>Contenu </li>
